Persistindo cliente, endereco.